--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@fastify/diagnostics-channel": "^5.0.0",
     "@prisma/client": "^5.21.0",
-    "fastify": "^5.0.0",
+    "fastify": "^4.15.0",
     "zod": "^3.23.8"
   }
 }
